prepare(styleguide): upgrade to Vue 3: fix search box z-index
* caused problems by changing z-index css variables in commit 2ee2b56a

--- a/docs/.vitepress/styles/main.scss
+++ b/docs/.vitepress/styles/main.scss
@@ -66,6 +66,10 @@ body {
   font-size: $font-size-large !important;
 }
 
+.VPLocalSearchBox {
+  z-index: 10000 !important;
+}
+
 .text, .vp-doc th, .vp-doc td, .vp-doc blockquote > p, .menu,
 .VPNavScreenMenuLink,
 .VPNavBarMenuLink, .pager-link .title {
